albumid=id bug fix, footer font change

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,7 @@ div {
     position: absolute;
     bottom: 0;
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-top: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(175, 175, 175);
 }
