--- a/src/app/main-host/main-host.component.html
+++ b/src/app/main-host/main-host.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <span>MPrestPhotos</span>
+    <span>Photos</span>
 </mat-toolbar>
 
 <mat-grid-list cols="12" rowHeight="600px" id="main-container">
@@ -8,7 +8,8 @@
     </mat-grid-tile>
     <mat-grid-tile [colspan]="8">
         <div id="photos-table">
-            <app-photos-data-table *ngIf="this.photosData !== null" [photosData]="this.photosData"></app-photos-data-table>
+            <app-table-material *ngIf="this.photosData !== null" [photosData]="this.photosData"></app-table-material>
+            <!-- <app-photos-data-table *ngIf="this.photosData !== null" [photosData]="this.photosData"></app-photos-data-table> -->
         </div>
     </mat-grid-tile>
 </mat-grid-list>
