add menu with tables choice

--- a/src/app/main-host/main-host.component.html
+++ b/src/app/main-host/main-host.component.html
@@ -1,5 +1,21 @@
 <mat-toolbar>
-    <span>Photos</span>
+    <mat-toolbar-row>
+        <span>Photos</span>
+        <span class="example-spacer"></span>
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon>menu</mat-icon>
+        </button>
+    </mat-toolbar-row>
+    <mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="this.isMaterialTable=true">
+        <mat-icon class="mat-table-icon">dataset</mat-icon>
+        <span>Material Table</span>
+    </button>
+    <button mat-menu-item (click)="this.isMaterialTable=false">
+        <mat-icon class="simple-table-icon">dataset</mat-icon>
+        <span>Table</span>
+    </button>
+    </mat-menu>
 </mat-toolbar>
 
 <mat-grid-list cols="12" rowHeight="600px" id="main-container">
@@ -8,8 +24,8 @@
     </mat-grid-tile>
     <mat-grid-tile [colspan]="8">
         <div id="photos-table">
-            <app-table-material *ngIf="this.photosData !== null" [photosData]="this.photosData"></app-table-material>
-            <!-- <app-photos-data-table *ngIf="this.photosData !== null" [photosData]="this.photosData"></app-photos-data-table> -->
+            <app-table-material *ngIf="this.photosData !== null && isMaterialTable" [photosData]="this.photosData"></app-table-material>
+            <app-photos-data-table *ngIf="this.photosData !== null && !isMaterialTable" [photosData]="this.photosData"></app-photos-data-table>
         </div>
     </mat-grid-tile>
 </mat-grid-list>
