--- a/src/app/main-host/main-host.component.scss
+++ b/src/app/main-host/main-host.component.scss
@@ -15,3 +15,12 @@ mat-toolbar{
 #large-photo{
     background-color: rgb(189, 189, 189);
 }
+.example-spacer {
+    flex: 1 1 auto;
+}
+.mat-table-icon {
+    color: rgb(5, 3, 114);
+}
+.simple-table-icon {
+    color: rgb(194, 0, 162);
+}
